# rust-struct-bindgen

./: .gitignore  Cargo.toml  README.md
rust-struct-bindgen-cli/: .gitignore  Cargo.toml
rust-struct-bindgen-cli/src/: main.rs
rust-struct-bindgen-impl/: Cargo.toml
rust-struct-bindgen-impl/src/: cache.rs  helper.rs  lib.rs
rust-struct-bindgen-impl/src/types/: array.rs  enumeration.rs  float.rs  integer.rs  mod.rs  structure.rs
rust-struct-bindgen-proc-macro/: Cargo.toml
rust-struct-bindgen-proc-macro/assets/: README.md  simple_prog.c
rust-struct-bindgen-proc-macro/src/: lib.rs
rust-struct-bindgen-proc-macro/tests/: bindgen_tests.rs  util.rs
