[package]
name = "rust-struct-bindgen-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-struct-bindgen-proc-macro = { path = "../rust-struct-bindgen-proc-macro" }
rust-struct-bindgen-impl = { path = "../rust-struct-bindgen-impl" }
