[package]
name = "rust-struct-bindgen-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.3", features = ["derive"] }
faerie = "0.16.0"
rust-struct-bindgen-impl = { path = "../rust-struct-bindgen-impl" }
target-lexicon = "^0.11.2"
