[package]
name = "rust-struct-bindgen-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
btfdump = "0.0.2"
fallible-iterator = "0.2.0"
object = "^0.11.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
target-lexicon = "^0.11.2"
faerie = "0.16.0"
